[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/Menus/Main Menu/ui_generic_button.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/main.tres" type="Theme" id=2]
[ext_resource path="res://mods/CertifiedPyro.TunaGuitar/Scenes/PresetsList/presets_list.tscn" type="PackedScene" id=3]
[ext_resource path="res://mods/CertifiedPyro.TunaGuitar/Scenes/LoadChordsMenu/load_chords_menu.gd" type="Script" id=6]

[node name="TunaGuitarLoadChordsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 6 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.3
anchor_top = 0.25
anchor_right = 0.7
anchor_bottom = 0.75
rect_pivot_offset = Vector2( -1137, -549 )

[node name="ExitButton" type="Button" parent="Panel"]
anchor_left = 0.979
anchor_top = -0.026
anchor_right = 1.014
anchor_bottom = 0.026
margin_right = 1.68005
margin_bottom = 8.304
text = "X"
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_constants/separation = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 736.0
margin_bottom = 442.0
size_flags_vertical = 3
custom_constants/separation = 16

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer/VBoxContainer"]
margin_right = 736.0
margin_bottom = 34.0
text = "Chord Presets"

[node name="PresetsList" parent="Panel/VBoxContainer/VBoxContainer" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 50.0
margin_right = 736.0
margin_bottom = 442.0

[node name="CenterContainer" type="CenterContainer" parent="Panel/VBoxContainer"]
margin_top = 474.0
margin_right = 736.0
margin_bottom = 508.0
size_flags_horizontal = 3

[node name="LoadButton" type="Button" parent="Panel/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
margin_left = 293.0
margin_right = 443.0
margin_bottom = 34.0
rect_min_size = Vector2( 150, 0 )
text = "Load"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="preset_activated" from="Panel/VBoxContainer/VBoxContainer/PresetsList" to="." method="_on_preset_activated"]
[connection signal="preset_deleted" from="Panel/VBoxContainer/VBoxContainer/PresetsList" to="." method="_on_preset_deleted"]
[connection signal="preset_renamed" from="Panel/VBoxContainer/VBoxContainer/PresetsList" to="." method="_on_preset_renamed"]
[connection signal="preset_selected" from="Panel/VBoxContainer/VBoxContainer/PresetsList" to="." method="_on_preset_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/CenterContainer/LoadButton" to="." method="_on_load_button_pressed"]
